<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.screens.note.NoteFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_baseline_arrow_back"
            app:titleTextColor="@color/yellow"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="25dp"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/done_text_btn"
                android:textColor="@color/yellow"
                android:textSize="22sp"
                android:visibility="gone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.appbar.MaterialToolbar>

        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/enter_title_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="1"
            android:nextFocusForward="@id/note_description"
            android:textColor="@color/dark"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="26sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/inter_semibold"
            android:hint="@string/enter_description_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="1"
            android:textColor="@color/dark"
            android:textColorHint="@color/light_gray"
            android:textCursorDrawable="@drawable/black_cursor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_title" />

        <TextView
            android:id="@+id/note_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:padding="20dp"
            android:textColor="@color/gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>